Fix Sort By block's bottom spacing for IE11 support

--- a/app/pages/search/_search-page.scss
+++ b/app/pages/search/_search-page.scss
@@ -15,6 +15,7 @@
 
   &__sortControlRow {
     margin-top: 10px;
+    height: 62px;
   }
 
   .app-MapToggle {
